Updated Icons for Weather

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h3 id="city-name"></h3>
             <p id="temp"></p>
             <p id="desc"></p>
-            <img id="icon" alt="Weather Icon">
+            <img id="icon" alt="Weather icon" width="96" height="96" loading="lazy">
         </div>
 
         <p class="error hidden" id="error-msg">City not found. Try again</p>
