Added live background on Home Page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="default-bg">
     <div class="container">
         <h2>Weather App</h2>
 
